fixed z-index for dragged file tab in electron

--- a/src/electron/static/electron.css
+++ b/src/electron/static/electron.css
@@ -271,6 +271,7 @@
     position: fixed;
     white-space:nowrap;
     height: 30px;
+    z-index: 1000;
 }
 .elec-tab-container .scroller {
     display: none;
